use vnc for josm